* fixed a bug in ie: class-names for image-snippets were set, but had no influence on ie, they have to be set with className =  * fixed a bug in safari (hopefully, sorry that I removed the old fix, the divs): yacy-logo is now above the fieldset, the fieldset clears and has a margin-left set  * fixed a bug with the dls: for example in ViewProfile.html the dt's (the terms/keys) had not the same height as the dd's, so the dt's were not in the same row with the coresponding dd's towards the bottom  * moved my new css-classes to the right place in base.css
git-svn-id: https://svn.berlios.de/svnroot/repos/yacy/trunk@3572 6c8d7289-2bf4-0310-a012-ef5d649a1542

--- a/htroot/env/base.css
+++ b/htroot/env/base.css
@@ -201,20 +201,6 @@ tt, *.tt {
   float: left;
 }
 
-.thumblink {
-  display:block;
-  width: 96px;
-  height: 96px;
-  margin: 2px;
-  line-height: 96px;
-  text-align: center;
-  overflow: hidden;
-}
-
-.thumblink img {
-  vertical-align: bottom;
-}
-
 .hides .hoverShow {
   display: none;
 }
@@ -323,7 +309,7 @@ form.search.small p.yacylogo { /* The logo in yacysearch.html */
   display:block;
   float:left;
   padding:0;
-  margin:5px;
+  margin: 0 5px 5px;
   width:70px;
 }
 
@@ -445,6 +431,16 @@ ul.SubMenu a.MenuItemLink{
   margin-top:0;
 }
 
+a.thumblink {
+  display:block;
+  width: 96px;
+  height: 96px;
+  margin: 2px;
+  line-height: 96px;
+  text-align: center;
+  overflow: hidden;
+}
+
 /*----------
 <em>
 */
@@ -508,14 +504,14 @@ li.menugroup {
 
 dl.pairs dd {
   padding:0.2em 0.5em;
-  margin:2px 0 2px 18.3em;
+  margin:0 0 2px 18.3em;
 }
 
 form dt, dl.pairs dt {
   float:left;
   clear:left;
   width:17em;
-  margin:0 2px 0.5em 2px;
+  margin:0 0 2px;
   padding:0.2em 0.5em;
   text-align:right;
 }
@@ -561,6 +557,11 @@ fieldset.yacysearch {
 form.PeerControl fieldset { /* on Status.html */
 	text-align:right;
 }
+
+form.search.small fieldset {
+    clear:left;
+    margin-left:85px;
+}
 /*----------
 <img>
 */
@@ -568,6 +569,10 @@ form.PeerControl fieldset { /* on Status.html */
 img.bookmarkIcon, img.deleteIcon, img.recommendIcon {
   height: 11px;
   width: 11px;
+}
+
+.thumblink img {
+  vertical-align: bottom;
 }
 
 /* site specific ------------------------------------*/
